--- a/human-presence-01zhou.yaml
+++ b/human-presence-01zhou.yaml
@@ -40,14 +40,6 @@ i2c:
   scan: true
   id: bus_a
   
-
-
-
-  
-  
-  
-  
-  
 uart:
   id: uart1
   tx_pin: TX
@@ -91,3 +83,102 @@ binary_sensor:
     pin: GPIO12  #D6
     name: "human_presence_1_pir"
     device_class: motion
+    
+    sensor:
+  - platform: bh1750
+    name: "Human Presence 1 Illuminance"
+    address: 0x23
+    update_interval: 60s    
+      
+
+  - platform: custom
+    lambda: |-
+      auto uart_component = static_cast<LD2410 *>(ld2410);
+      return {uart_component->movingTargetDistance,uart_component->movingTargetEnergy,uart_component->stillTargetDistance,uart_component->stillTargetEnergy,uart_component->detectDistance};
+    sensors:
+      - name: "Moving Target Distance"
+        unit_of_measurement: "cm"
+        accuracy_decimals: 0
+      - name: "Moving Target Energy"
+        unit_of_measurement: "%"
+        accuracy_decimals: 0
+      - name: "Still Target Distance"
+        unit_of_measurement: "cm"
+        accuracy_decimals: 0
+      - name: "Still Target Energy"
+        unit_of_measurement: "%"
+        accuracy_decimals: 0
+      - name: "Detect Distance"
+        unit_of_measurement: "cm"
+        accuracy_decimals: 0
+
+number:        
+  - platform: template
+    name: "Max Moving Distance Range"
+    id: maxMovingDistanceRange
+    min_value: 1
+    max_value: 8
+    step: 1
+    update_interval: never
+    optimistic: true
+    set_action:
+      - lambda: |-
+          auto uart_component = static_cast<LD2410 *>(ld2410);
+          uart_component->setMaxDistancesAndNoneDuration(x,id(maxStillDistanceRange).state,id(noneDuration).state);
+  - platform: template
+    name: "Max Still Distance Range"
+    id: maxStillDistanceRange
+    min_value: 1
+    max_value: 8
+    step: 1
+    update_interval: never
+    optimistic: true
+    set_action:
+      - lambda: |-
+          auto uart_component = static_cast<LD2410 *>(ld2410);
+          uart_component->setMaxDistancesAndNoneDuration(id(maxMovingDistanceRange).state,x,id(noneDuration).state);
+  - platform: template
+    name: "None Duration"
+    id: noneDuration
+    min_value: 0
+    max_value: 32767
+    step: 1
+    mode: box
+    update_interval: never
+    optimistic: true
+    set_action:
+      - lambda: |-
+          auto uart_component = static_cast<LD2410 *>(ld2410);
+          uart_component->setMaxDistancesAndNoneDuration(id(maxMovingDistanceRange).state,id(maxStillDistanceRange).state,x);
+      
+
+button:
+  - platform: template
+    name: "Reboot LD2410"
+    on_press:
+      lambda: 'static_cast<LD2410 *>(ld2410)->reboot();'
+  - platform: template
+    name: "Turn on config mode"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->setConfigMode(true);'
+  - platform: template
+    name: "Turn off config mode"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->setConfigMode(false);'
+  - platform: template
+    name: "Get config"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->queryParameters();'
+  - platform: template
+    name: "Set baud rate to 256000"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(7);'
+  - platform: template
+    name: "Set baud rate to 115200"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(5);'
+  - platform: template
+    name: "Set baud rate to 9600"
+    on_press:
+      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(1);'
+
