--- a/human-presence-01zhou.yaml
+++ b/human-presence-01zhou.yaml
@@ -1,5 +1,9 @@
+substitutions:
+  devicename: "presence-espld2410b-01" #Rename the device what you want.
+  upper_devicename: mRadar01 #Rename the device what you want.
 esphome:
-  name: "esphuman-presence-01"
+  name: $devicename
+
   
 
   includes:
@@ -65,29 +69,37 @@ binary_sensor:
       auto uart_component = static_cast<LD2410 *>(ld2410);
       return {uart_component->hasTarget,uart_component->hasMovingTarget,uart_component->hasStillTarget,uart_component->lastCommandSuccess};
     binary_sensors:
-      - name: "Has Target"
-      - name: "Has Moving Target"
-      - name: "Has Still Target"
-      - name: "Last Command Success"
+      - name: ${upper_devicename} Has Target
+      - name: ${upper_devicename} Has Moving Target
+      - name: ${upper_devicename} Has Still Target
+      - name: ${upper_devicename} Last Command Success
   
   - platform: gpio
     id: human_presence_1_motion
     pin: 
       number: GPIO16  #D0
       mode: INPUT_PULLDOWN
-    name: "human_presence_1"
+    name: ${upper_devicename} human_presence
     device_class: presence
     
   - platform: gpio
     id: human_presence_1_PIR
     pin: GPIO12  #D6
-    name: "human_presence_1_pir"
+    name: ${upper_devicename} human_presence_pir
     device_class: motion
     
     sensor:
   - platform: bh1750
-    name: "Human Presence 1 Illuminance"
+    name: ${upper_devicename} Human Presence Illuminance
     address: 0x23
+  filters:
+    - calibrate_polynomial:
+       degree: 2
+       datapoints:
+        # Map 0.0 (from sensor) to 0.0 (true value)
+        - 0.0 -> 0.0
+        - 0.6 -> 7
+        - 8.3 -> 17
     update_interval: 60s    
       
 
@@ -96,25 +108,25 @@ binary_sensor:
       auto uart_component = static_cast<LD2410 *>(ld2410);
       return {uart_component->movingTargetDistance,uart_component->movingTargetEnergy,uart_component->stillTargetDistance,uart_component->stillTargetEnergy,uart_component->detectDistance};
     sensors:
-      - name: "Moving Target Distance"
+      - name: "${upper_devicename} Moving Target Distance
         unit_of_measurement: "cm"
         accuracy_decimals: 0
-      - name: "Moving Target Energy"
+      - name: ${upper_devicename} Moving Target Energy
         unit_of_measurement: "%"
         accuracy_decimals: 0
-      - name: "Still Target Distance"
+      - name: ${upper_devicename} Still Target Distance
         unit_of_measurement: "cm"
         accuracy_decimals: 0
-      - name: "Still Target Energy"
+      - name: ${upper_devicename} Still Target Energy
         unit_of_measurement: "%"
         accuracy_decimals: 0
-      - name: "Detect Distance"
+      - name: ${upper_devicename} Detect Distance
         unit_of_measurement: "cm"
         accuracy_decimals: 0
 
 number:        
   - platform: template
-    name: "Max Moving Distance Range"
+    name: ${upper_devicename} Max Moving Distance Range
     id: maxMovingDistanceRange
     min_value: 1
     max_value: 8
@@ -126,7 +138,7 @@ number:
           auto uart_component = static_cast<LD2410 *>(ld2410);
           uart_component->setMaxDistancesAndNoneDuration(x,id(maxStillDistanceRange).state,id(noneDuration).state);
   - platform: template
-    name: "Max Still Distance Range"
+    name: ${upper_devicename} Max Still Distance Range
     id: maxStillDistanceRange
     min_value: 1
     max_value: 8
@@ -138,7 +150,7 @@ number:
           auto uart_component = static_cast<LD2410 *>(ld2410);
           uart_component->setMaxDistancesAndNoneDuration(id(maxMovingDistanceRange).state,x,id(noneDuration).state);
   - platform: template
-    name: "None Duration"
+    name: ${upper_devicename} None Duration
     id: noneDuration
     min_value: 0
     max_value: 32767
@@ -154,31 +166,32 @@ number:
 
 button:
   - platform: template
-    name: "Reboot LD2410"
+    name: ${upper_devicename} Reboot LD2410
     on_press:
       lambda: 'static_cast<LD2410 *>(ld2410)->reboot();'
   - platform: template
-    name: "Turn on config mode"
+    name: ${upper_devicename} Turn on config mode
     on_press:
       - lambda: 'static_cast<LD2410 *>(ld2410)->setConfigMode(true);'
   - platform: template
-    name: "Turn off config mode"
+    name: ${upper_devicename} Turn off config mode
     on_press:
       - lambda: 'static_cast<LD2410 *>(ld2410)->setConfigMode(false);'
   - platform: template
-    name: "Get config"
+    name: ${upper_devicename} Get config
     on_press:
       - lambda: 'static_cast<LD2410 *>(ld2410)->queryParameters();'
-  - platform: template
-    name: "Set baud rate to 256000"
-    on_press:
-      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(7);'
-  - platform: template
-    name: "Set baud rate to 115200"
-    on_press:
-      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(5);'
-  - platform: template
-    name: "Set baud rate to 9600"
-    on_press:
-      - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(1);'
+   
+  # - platform: template
+  #   name: "Set baud rate to 256000"
+  #   on_press:
+  #     - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(7);'
+  # - platform: template
+  #   name: "Set baud rate to 115200"
+  #   on_press:
+  #     - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(5);'
+  # - platform: template
+  #   name: "Set baud rate to 9600"
+  #   on_press:
+  #     - lambda: 'static_cast<LD2410 *>(ld2410)->setBaudrate(1);'
 
